--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Brad/eclipse-workspace/GrouperDB/sqlite-jdbc-3.20.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
