--- a/Grouper/app/src/main/AndroidManifest.xml
+++ b/Grouper/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
+        <activity android:name=".NewEnvironment"></activity>
     </application>
 
 </manifest>
