--- a/Grouper/app/build.gradle
+++ b/Grouper/app/build.gradle
@@ -32,4 +32,34 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+
+    // Google
+    compile 'com.google.android.gms:play-services-auth:11.4.2'
+
+    // Firebase
+    compile 'com.google.firebase:firebase-analytics:11.4.2'
+    compile 'com.google.firebase:firebase-database:11.4.2'
+    compile 'com.google.firebase:firebase-storage:11.4.2'
+    compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.google.firebase:firebase-config:11.4.2'
+    compile 'com.google.android.gms:play-services-appinvite:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.google.android.gms:play-services-ads:11.4.2'
+    compile 'com.google.firebase:firebase-appindexing:11.4.2'
+    compile 'com.google.firebase:firebase-crash:11.4.2'
+    compile 'com.google.firebase:firebase-analytics:11.4.2'
+
+    // Firebase UI
+    compile 'com.firebaseui:firebase-ui-database:3.0.0'
+
+    // Testing dependencies
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support:support-annotations:26.1.0'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
