--- a/Grouper/app/src/main/AndroidManifest.xml
+++ b/Grouper/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity
             android:name=".UI.LoginActivity"
             android:label="@string/title_activity_login" />
+        <activity
+            android:name=".UI.Questionnaire"
+            android:label="Questionnaire" />
     </application>
 
 </manifest>
