--- a/Grouper/app/build.gradle
+++ b/Grouper/app/build.gradle
@@ -4,11 +4,12 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "reboot.grouper"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -20,6 +21,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
@@ -30,4 +32,9 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'co.chatsdk.chatsdk:chat-sdk-core:4.0.5'
+    compile 'co.chatsdk.chatsdk:chat-sdk-ui:4.0.5'
+    compile 'co.chatsdk.chatsdk:chat-sdk-firebase-adapter:4.0.5'
+    compile 'co.chatsdk.chatsdk:chat-sdk-firebase-file-storage:4.0.5'
 }
+apply plugin: 'com.google.gms.google-services'
