--- a/Grouper/app/src/main/AndroidManifest.xml
+++ b/Grouper/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="firebase_root_path" android:value="@string/firebase_root_path" />
+        <meta-data android:name="firebase_url" android:value="@string/firebase_url" />
+        <meta-data android:name="firebase_root_path" android:value="@string/firebase_root_path" />
+        <meta-data android:name="firebase_storage_url" android:value="@string/firebase_storage_url" />
+        <meta-data android:name="cloud_messaging_server_key" android:value="@string/firebase_cloud_messaging_server_key" />
+        <meta-data android:name="google_web_client_id" android:value="@string/google_web_client_id" />
         <activity android:name=".startup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
